--- a/views/admin/archives.ejs
+++ b/views/admin/archives.ejs
@@ -21,7 +21,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'archives' }) %>
+      <%- include('sidebar', { activeTab: 'archives', activeSub: "" }) %>
       <main class="main">
          <div class="title-container">
           <div class="r">
