--- a/views/admin/blockchain-activity-log.ejs
+++ b/views/admin/blockchain-activity-log.ejs
@@ -23,7 +23,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'blockchain' }) %>
+      <%- include('sidebar', { activeTab: 'blockchain', activeSub: "blockchain-activity-log" }) %>
       <main class="main">
         <div class="title-container">
           <div class="r">
