--- a/views/admin/candidates.ejs
+++ b/views/admin/candidates.ejs
@@ -163,7 +163,7 @@
     </script>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'candidates' }) %>
+      <%- include('sidebar', { activeTab: 'candidates', activeSub: "" }) %>
       <main class="main">
         <div class="title-container">
           <div class="r">
