--- a/views/admin/election-results.ejs
+++ b/views/admin/election-results.ejs
@@ -26,7 +26,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'election' }) %>
+      <%- include('sidebar', { activeTab: 'election', activeSub: "results" }) %>
       <main class="main">
         <div class="title-container">
           <div class="r">
