--- a/views/admin/election-vote-tally.ejs
+++ b/views/admin/election-vote-tally.ejs
@@ -30,7 +30,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'election' }) %>
+      <%- include('sidebar', { activeTab: 'election', activeSub: "vote-tally" }) %>
 
       <main class="main">
         <div class="title-container">
