--- a/views/admin/election-voter-turnout.ejs
+++ b/views/admin/election-voter-turnout.ejs
@@ -27,7 +27,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'election' }) %>
+      <%- include('sidebar', { activeTab: 'election', activeSub:"voter-turnout" }) %>
       <main class="main">
         <div class="title-container">
           <div class="r">
