--- a/views/admin/system-edit-account.ejs
+++ b/views/admin/system-edit-account.ejs
@@ -17,7 +17,7 @@
   <body>
     <%- include('header') %>
     <div class="content">
-      <%- include('sidebar', { activeTab: 'system' }) %>
+      <%- include('sidebar', { activeTab: 'system', activeSub: "edit-account" }) %>
       <main class="main">
         <div class="title-container">
           <div class="r">
