--- a/views/admin/configuration.ejs
+++ b/views/admin/configuration.ejs
@@ -48,7 +48,7 @@
   <%- include('header') %>
 
   <div class="content">
-    <%- include('sidebar', { activeTab: 'configuration' }) %>
+    <%- include('sidebar', { activeTab: 'configuration', activeSub: "" }) %>
     <main class="main">
       <div class="title-container">
         <div class="r">
