--- a/views/admin/election-reset.ejs
+++ b/views/admin/election-reset.ejs
@@ -21,7 +21,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'election' }) %>
+      <%- include('sidebar', { activeTab: 'election', activeSub: "reset" }) %>
       <main class="main">
         <div class="reset-election box-shadow">
           <form>
