--- a/views/admin/system-activity-log.ejs
+++ b/views/admin/system-activity-log.ejs
@@ -23,7 +23,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'system' }) %>
+      <%- include('sidebar', { activeTab: 'system', activeSub: "system-activity-log" }) %>
       <main class="main">
         <div class="title-container">
           <div class="r">
