--- a/views/admin/system-help-page.ejs
+++ b/views/admin/system-help-page.ejs
@@ -21,7 +21,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'system' }) %>
+      <%- include('sidebar', { activeTab: 'system', activeSub: "help-page" }) %>
       <main class="main">
         <div class="title-container">
           <div class="r">
