--- a/views/admin/system-manage-admins.ejs
+++ b/views/admin/system-manage-admins.ejs
@@ -43,7 +43,7 @@
   <body>
     <%- include('header') %>
     <div class="content">
-      <%- include('sidebar', { activeTab: 'system' }) %>
+      <%- include('sidebar', { activeTab: 'system', activeSub: "manage-admins" }) %>
       <main class="main">
         <div class="title-container">
           <div class="r">
