--- a/public/admin/css/candidates.css
+++ b/public/admin/css/candidates.css
@@ -143,8 +143,8 @@ form img {
 }
 
 .candidate img {
-  height: 6rem;
-  width: 6rem;
+  height: 100%;
+  width: 100%;
   object-fit: cover;
   border-radius: 50%;
 }
